# cmake

./: CMakeLists.txt
alglib0/: CMakeLists.txt
